--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Old Man Storr, Isle of Skye</h2>
-							<p>This was shot an the Isle of Skye during a 2 month road trip with my fiance. The weather cleared up so I decided it was a good opportunity to get the drone out which ended up with a really beautiful shot. The contrast between the dark green and the rocks of the mountain really made this photo stand out to me.</p>
+							<p>This was shot on the Isle of Skye during a 2 month road trip with my fiance. The weather cleared up so I decided it was a good opportunity to get the drone out which ended up with a really beautiful shot. The contrast between the dark green grass and the rocks of the mountain really made this photo stand out to me.</p>
 							<ul class="actions stacked">
 							</ul>
 						</div>
@@ -60,7 +60,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Kimmeridge Bay, Dorset</h2>
-							<p>Located along the Jurrasic coast Kimmeridge Bay is one of the most beautiful places that I have been to. I quite oftern visit as it is only a 20 minute drive from where I live. Would highly recommend to any wanting a peaceful walk by the coast.</p>
+							<p>Located along the Jurrasic coast Kimmeridge Bay is one of the most beautiful places that I have been to. I quite oftern visit as it is only a 20 minute drive from where I live. Would highly recommend to anyone wanting a peaceful walk by the coast.</p>
 							<ul class="actions stacked">
 							</ul>
 						</div>
